# let-them-out

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
api/: spark-evolve.py  spark.py
flaneur/: __init__.py  cli.py  ingest.py  server.py
flaneur/static/: app.js  index.html  style.css
public/: app.js  index.html  style.css
public/sample-notes/: athletic-choking.md  beehive-architecture.md  cargo-cult-economics.md  cathedral-thinking.md  color-perception-tetrachromacy.md  default-effect-organ-donation.md  desire-paths.md  dunbar-number-tribes.md  fermentation-time.md  fibonacci-markets.md  gravitational-time-dilation.md  improvisation-constraints.md  indigo-dye-revolutions.md  japanese-joinery.md  libraries-as-resistance.md  manifest.json  mirror-neurons-empathy.md  mycorrhizal-networks.md  negative-space-sculpture.md  octopus-distributed-brain.md  oral-storytelling-memory.md  persian-gardens-paradise.md  phantom-limb-body-schema.md  price-anchoring-psychology.md  slime-mold-intelligence.md  sourdough-starter-microbiome.md  spice-trade-geopolitics.md  synesthesia-creativity.md  threshold-concepts.md  typeface-psychology.md  wabi-sabi-repair.md
