[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flaneur"
version = "0.1.0"
description = "Take a walk through your notes. Discover surprising connections."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "David King" }]
keywords = ["notes", "obsidian", "embeddings", "knowledge-graph", "serendipity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = [
    "anthropic>=0.40",
    "click>=8.0",
    "flask>=3.0",
]

[project.scripts]
flaneur = "flaneur.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
flaneur = ["static/**/*"]
